# intellipdf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  FINAL_DECISION.md  LICENSE  LOGO_DESIGN.md  QUICK_START.md  README.md  README_smartpdf.md  SPONSORS.md  build.py  init_github_repo.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_installation.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: OVERVIEW.md
docs/images/: README.md
src/: pdf_tool.py
src/intellipdf/: __init__.py
src/intellipdf/cli/: __init__.py  commands.py  main.py
src/intellipdf/core/: chapter_detector.py  formatter.py  ocr_engine.py  processor.py
src/intellipdf/utils/: helpers.py
test_env/: pyvenv.cfg
tests/: __init__.py  test_basic.py
