[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellipdf"
description = "Intelligent PDF Processing Toolkit"
readme = "README.md"
authors = [
    {name = "IntelliPDF Team", email = "503583219@qq.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []  # 空依赖，先让构建通过

[project.optional-dependencies]
full = [
    "pymupdf>=1.23.0",
    "pillow>=10.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
intellipdf = "intellipdf.cli.main:cli"